# NeoExplorer

./: .gitignore  Cargo.toml  README.md  jsconfig.json  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.js
docs/01-Planning/: 01-Software Life Cycle Environment Planning.md  02-Software Standards.md  03-Software Configuration Management.md  05-Software Planning Roadmap.md
docs/02-Requirements/: 01-Software Flow.drawio  03-Software Requirement Specification.md  04-Software Layout Design.drawio
docs/04-Miscellaneous/: 01-license.lic  02-contributions.md  03-changelog.md
src/: app.css  app.html  icon.css  main.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/core/: mod.rs
src-tauri/src/core/db_engine/: backup_service.rs  cache_handler.rs  database_connector.rs  message_queue.rs  mod.rs  query_processor.rs
src-tauri/src/core/db_engine/managers/: localization_manager.rs  metadata_manager.rs  mod.rs  theme_manager.rs
src-tauri/src/core/explorer_engine/: explorer_service.rs  mod.rs
src-tauri/src/core/explorer_engine/file_service/: info_handler.rs  mod.rs
src-tauri/src/core/search_engine/: database_service.rs  index_service.rs  mod.rs  windows_service.rs
src-tauri/src/system/: mod.rs  tray.rs  window.rs
src-tauri/src/utilities/: file.rs  mod.rs  time.rs
src/lib/: Toast.svelte  common.js  records.js  utilities.js
src/lib/components/: ContextMenu.svelte  DriveItem.svelte  DriveView.svelte  ExplorerView.svelte  ListViewItem.svelte  StatusBar.svelte  TabWindowComponent.svelte  Titlebar.svelte
src/lib/widgets/: WidgetColorPicker.svelte  WidgetSelection.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/properties/: +layout.svelte  +page.svelte
src/routes/settings/: +layout.svelte  +page.svelte
static/assets/css/: icon.css
