[package]
name = "neoexplorer"
version = "0.0.1"
description = "The Ultimate File Exploration Experience"
authors = ["B74Z3"]
edition = "2021"
rust-version = "1.79"

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lru = "0.12.3"
r2d2 = "0.8.10"
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
winapi = { version = "0.3.9", features = ["winnt", "fileapi", "handleapi", "winioctl", "minwindef", "winbase", "ioapiset", "setupapi", "errhandlingapi", "winerror"] }
rayon = {version = "1.10.0", features = [] }
rusqlite = { version = "0.32.1", features = ["bundled", "unlock_notify"] }
bincode = {version = "1.3.3", features = [] } 
lazy_static = {version = "1.5.0", features = [] }
walkdir = {version = "2.5.0", features = [] }
sysinfo = {version = "0.31.2", features = [] }
notify = { version = "6.1.1", features = [] }

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }
