[package]
name = "neoexplorer"
version = "0.0.1"
description = "The Ultimate File Exploration Experience"
authors = ["B74Z3"]
edition = "2021"
rust-version = "1.79"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = { version = "1.0.122", features = [] }
lru = { version = "0.12.4", features = [] }
r2d2 = { version = "0.8.10", features = [] }
r2d2_sqlite = { version = "0.25.0", features = ["bundled"] }
winapi = { version = "0.3.9", features = ["winnt", "fileapi", "handleapi", "winioctl", "minwindef", "winbase", "ioapiset", "setupapi", "errhandlingapi", "winerror"] }
rayon = {version = "1.10.0", features = [] }
rusqlite = { version = "0.32.1", features = ["bundled", "unlock_notify"] }
bincode = {version = "1.3.3", features = [] } 
lazy_static = {version = "1.5.0", features = [] }
sysinfo = {version = "0.31.2", features = [] }
notify = { version = "6.1.1", features = [] }
jwalk = { version = "0.8.1", features = [] }

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
