[package]
name = "neoexplorer"
version = "0.1.0"
description = "The Ultimate File Exploration Experience"
authors = ["B74Z3"]
edition = "2021"
rust-version = "1.80"

[dependencies]
tauri = { version = "2.0.0-rc", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = { version = "2.0.0-rc", features = [] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = { version = "1.0.125", features = [] }
rayon = {version = "1.10.0", features = [] }
rusqlite = { version = "0.32.1", features = ["bundled", "unlock_notify"] }
bincode = {version = "1.3.3", features = [] } 
lazy_static = {version = "1.5.0", features = [] }
sysinfo = {version = "0.31.2", features = [] }
notify = { version = "6.1.1", features = [] }
jwalk = { version = "0.8.1", features = [] }
tokio = {version = "1.39.3", features = ["full"] }
trash = {version = "5.1.0", features = [] }
[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.
